--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
     "@react-native-mapbox-gl/maps": "^7.0.1",
