--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,7 +12,10 @@
     "@react-native-mapbox-gl/maps": "^7.0.1",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
     "react-native-style-tachyons": "^4.0.0",
+    "react-navigation": "^3.12.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
